cmd/shared/libgogit.h

extern char* GitRestoreOptionsAddFile(long long handle, char* path);
extern void GitRestoreOptionsFree(long long handle);
extern void GitCommitOptionsNew(long long* handleOut);
extern char* GitCommitOptionsSetAll(long long handle, int val);
extern char* GitCommitOptionsSetAllowEmptyCommits(long long handle, int val);
extern char* GitCommitOptionsSetSigner(long long handle, long long signerHandle);
extern char* GitCommitOptionsSetAmend(long long handle, int val);
extern char* GitCommitOptionsSetAuthorNameEmail(long long handle, char* name, char* email);
extern char* GitCommitOptionsSetCommitterNameEmail(long long handle, char* name, char* email);
extern void GitCommitOptionsFree(long long handle);
extern void GitCreateTagOptionsNew(long long* handleOut);
extern char* GitCreateTagOptionsSetMessage(long long handle, char* val);
extern char* GitCreateTagOptionsSetTaggerNameEmail(long long handle, char* name, char* email);
extern void GitCreateTagOptionsFree(long long handle);
extern void GitAddOptionsNew(long long* handleOut);
extern char* GitAddOptionsSetAll(long long handle, int val);
extern char* GitAddOptionsSetPath(long long handle, char* val);
extern char* GitAddOptionsSetGlob(long long handle, char* val);
extern char* GitAddOptionsSetSkipStatus(long long handle, int val);
extern void GitAddOptionsFree(long long handle);
extern void GitCleanOptionsNew(long long* handleOut);
extern char* GitCleanOptionsSetDir(long long handle, int val);
extern void GitCleanOptionsFree(long long handle);
extern void GitLogOptionsNew(long long* handleOut);
extern char* GitLogOptionsSetFrom(long long handle, char* val);
extern char* GitLogOptionsSetTo(long long handle, char* val);
extern char* GitLogOptionsSetOrder(long long handle, int val);
extern char* GitLogOptionsSetAll(long long handle, int val);
extern void GitLogOptionsFree(long long handle);
extern void GitPlainOpenOptionsNew(long long* handleOut);
extern char* GitPlainOpenOptionsSetDetectDotGit(long long handle, int val);
extern void GitPlainOpenOptionsFree(long long handle);
extern void GitListOptionsNew(long long* handleOut);
extern char* GitListOptionsSetAuth(long long handle, long long authHandle);
extern char* GitListOptionsSetInsecureSkipTLS(long long handle, int val);
extern char* GitListOptionsSetTimeout(long long handle, int val);
extern void GitListOptionsFree(long long handle);
extern void GitMergeOptionsNew(long long* handleOut);
extern char* GitMergeOptionsSetStrategy(long long handle, int val);
extern void GitMergeOptionsFree(long long handle);
extern void GitSubmoduleUpdateOptionsNew(long long* handleOut);
extern char* GitSubmoduleUpdateOptionsSetInit(long long handle, int val);
extern char* GitSubmoduleUpdateOptionsSetNoFetch(long long handle, int val);
extern char* GitSubmoduleUpdateOptionsSetAuth(long long handle, long long authHandle);
extern char* GitSubmoduleUpdateOptionsSetDepth(long long handle, int val);
extern void GitSubmoduleUpdateOptionsFree(long long handle);