cmd/shared/dotnet/GoGit.Interop/NativeMethods.cs


    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRestoreOptionsAddFile(long handle, [MarshalAs(UnmanagedType.LPUTF8Str)] string path);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitRestoreOptionsFree(long handle);

    // CommitOptions

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitCommitOptionsNew(out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCommitOptionsSetAll(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCommitOptionsSetAllowEmptyCommits(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCommitOptionsSetSigner(long handle, long signerHandle);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCommitOptionsSetAmend(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCommitOptionsSetAuthorNameEmail(
        long handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string name,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string email);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCommitOptionsSetCommitterNameEmail(
        long handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string name,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string email);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitCommitOptionsFree(long handle);

    // CreateTagOptions

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitCreateTagOptionsNew(out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCreateTagOptionsSetMessage(long handle, [MarshalAs(UnmanagedType.LPUTF8Str)] string val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCreateTagOptionsSetTaggerNameEmail(
        long handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string name,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string email);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitCreateTagOptionsFree(long handle);

    // AddOptions

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitAddOptionsNew(out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitAddOptionsSetAll(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitAddOptionsSetPath(long handle, [MarshalAs(UnmanagedType.LPUTF8Str)] string val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitAddOptionsSetGlob(long handle, [MarshalAs(UnmanagedType.LPUTF8Str)] string val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitAddOptionsSetSkipStatus(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitAddOptionsFree(long handle);

    // CleanOptions

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitCleanOptionsNew(out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCleanOptionsSetDir(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitCleanOptionsFree(long handle);

    // LogOptions

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitLogOptionsNew(out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitLogOptionsSetFrom(long handle, [MarshalAs(UnmanagedType.LPUTF8Str)] string val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitLogOptionsSetTo(long handle, [MarshalAs(UnmanagedType.LPUTF8Str)] string val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitLogOptionsSetOrder(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitLogOptionsSetAll(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitLogOptionsFree(long handle);

    // PlainOpenOptions

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitPlainOpenOptionsNew(out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitPlainOpenOptionsSetDetectDotGit(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitPlainOpenOptionsFree(long handle);

    // ListOptions

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitListOptionsNew(out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitListOptionsSetAuth(long handle, long authHandle);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitListOptionsSetInsecureSkipTLS(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitListOptionsSetTimeout(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitListOptionsFree(long handle);

    // MergeOptions

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitMergeOptionsNew(out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitMergeOptionsSetStrategy(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitMergeOptionsFree(long handle);

    // SubmoduleUpdateOptions

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitSubmoduleUpdateOptionsNew(out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitSubmoduleUpdateOptionsSetInit(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitSubmoduleUpdateOptionsSetNoFetch(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitSubmoduleUpdateOptionsSetAuth(long handle, long authHandle);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitSubmoduleUpdateOptionsSetDepth(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitSubmoduleUpdateOptionsFree(long handle);

}
